# MagicCamera

./: .gitignore
Project-AndroidStudio/: build.gradle
Project-AndroidStudio/app/: build.gradle
Project-AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
Project-AndroidStudio/magicfilter/: build.gradle
Project-AndroidStudio/magicfilter/src/main/cpp/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
